# alert_correlation

./: .gitignore  README.md  alerts_results2.csv  docker-compose.yml  extraction.ipynb  final_report.md  main.py  pruebas.ipynb  pyproject.toml
data/: dataset_contexto.csv  dataset_sintetico_cve.json  dataset_sintetico_cves.csv  enterprise-attack.json.etag  escenario1.csv  escenario2.csv  escenario4.csv  escenario5.csv  example.csv  examples.csv  mini_dataset.csv  mini_dataset_parsed.csv  tram_data.json  unique.csv  unique_alerts.csv  unique_alerts_2.csv  unique_alerts_classification.json  unique_alerts_classification_gemma.json  unique_alerts_classification_v2.json
evaluations/: alerts_results.csv  cve_evaluation.csv  evaluations_results.csv  mitre_evaluation.csv
examples/cve-gemini-top5/: report_20892515.md  report_21761742.md  report_25961901.md  report_34247702.md  report_39423633.md  report_45670800.md  report_60346805.md  report_60882480.md  report_70896328.md  report_76189413.md  report_82122458.md  report_88452635.md  report_89294974.md  report_89645692.md  report_92767129.md
notebooks/: dataset_creation.ipynb  pruebas.ipynb
notes/: EVAL-04D59B_debug.json  EVAL-161304_debug.json  EVAL-602432_debug.json  EVAL-743D89_debug.json  EVAL-79E93D_debug.json  EVAL-86CB9E_debug.json  EVAL-894CB6_debug.json  EVAL-91315F_debug.json  EVAL-95CDBB_debug.json  EVAL-A3747E_debug.json  EVAL-AA144A_debug.json  EVAL-D1F60D_debug.json  EVAL-D2C29A_debug.json  EVAL-E97A66_debug.json  EVAL-EDB09C_debug.json  eval_executions.md  index_versions.md  query_results.txt
(+86 files in other folders)
