[project]
name = "alert-correlation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "elasticsearch<8.0.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "langsmith>=0.7.32",
    "mitreattack-python>=5.4.5",
    "ollama>=0.6.1",
    "sentence-transformers>=5.4.1",
]
